Fix Add Metodo de pagamento com validacao de cliente existente